# c-compiler

./: CMakeLists.txt  CMakePresets.json  Taskfile.yml
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: c-compiler_test.cpp
